--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FBkc7FHnf3/GKmKTP7lvi1yNCGUj+udYpsqqYnrAiM32ToGxiIP+VeNDBA7V7moTvAYMPBW/uKLjNho2SiEF2voozZEHNAAeIDo47w6r+CcXWFpD3EWvUHRh8ZBv1+Wk">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qjzX/29UJ6YOlFS6uo3V2aKU4EwsNYeU2syk+N9cRLaPx2qE3X5dFME2+Z6Sf6yaJgOMIf7f5b6laNwI/hel9l1ic8Dqf14qyjbX8zoQYsV3QMZJly1Zf1DZdKxcGP9D">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
